[package]
name = "it7259"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/it7259"
documentation = "https://docs.rs/it7259"
homepage = "https://github.com/andelf/it7259"
categories = []
description = ""
keywords = ["it7259", "it7257"]
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.4", optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-hal-1 = {  package = "embedded-hal", version = "1.0.0-alpha.10" }
